# mood-eval-server-Juniper

./: Cargo.toml  diesel.toml
migrations/2020-04-09-204640_create_posts/: down.sql  up.sql
src/: main.rs  model.rs  schema.rs  schema_diesel.rs  tests.rs
