[package]
name = "mood_eval_server"
version = "0.1.0"
authors = ["Greg Harms <slwriotcontrol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.14.2"
juniper_rocket = "0.5.2"
rocket = "0.4.4"
chrono = "0.4"
serde_json = "1.0.51"
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.15.0"